--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,17 @@
   <h4 style ="font-family:cursive">speed:</h4>
   
   <input type="range" id = "slider" min = "1" max = "10" value = "1" />
-  <br><br>
+  
+  
+  <h4 style ="font-family:cursive">text:</h4>
+  <input type="text" id = "text_data" placeholder="copy paste the required text"/>
 
+
+  <br><br>
   <div style="text-align: center;">
     <button style = "color:rgb(255, 255, 255); background-image: url('image.png'); font-family:cursive;" id="speak">Speak</button>
   </div>
-  
+
   <script src="popup.js"></script>
 </body>
 </html>
