added stop button

--- a/popup.html
+++ b/popup.html
@@ -7,18 +7,22 @@
 <body>
   
   <h3 style="text-align: center;">T2S</h3>
-  <h4 style ="font-family:cursive">speed:</h4>
+  <h4 style ="font-family:cursive">Speed:</h4>
   
   <input type="range" id = "slider" min = "1" max = "10" value = "1" />
   
   
-  <h4 style ="font-family:cursive">text:</h4>
+  <h4 style ="font-family:cursive">Text:</h4>
   <input type="text" id = "text_data" placeholder="copy paste the required text"/>
 
 
   <br><br>
   <div style="text-align: center;">
     <button style = "color:rgb(255, 255, 255); background-image: url('image.png'); font-family:cursive;" id="speak">Speak</button>
+    <button style = "color:rgb(255, 255, 255); background-image: url('image.png'); font-family:cursive;" id="stop">Stop</button>
+  </div>
+  <div style="text-align: right;">
+    
   </div>
 
   <script src="popup.js"></script>
