--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
   <title>Speak Selected Text</title>
   
 </head>
-<body>
+<body style="background-image: url(background.jpg);">
   
   <h3 style="text-align: center;">T2S</h3>
   <h4 style ="font-family:cursive">Speed:</h4>
